# tickertrendingbot

./: COMMANDS.md  LICENSE  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  active_chats.json  admin_handler.py  auth_decorators.py  boost_config.json  boost_data.json  boost_handler.py  boost_manager.py  boost_menu.py  boost_payment.py  bot.py  bsc_monitor.py  button_handler.py  callback_handler.py  callback_manager.py  chat_tracker.py  clean_locks.py  clean_restart.py  clean_restart_enhanced.py  config.py  conversation_handler.py  customization_handler.py  dashboard.py  data_debug.py  data_manager.py  dual_chain_tracker.py  error_handler.py  eth_monitor.py  group_tokens.json  help_handler.py  kill_bots.py  kill_duplicates.py  main.py  owner_id.txt  owner_manager.py  payment_handler.py  (+21 more)
backup_files/: ethereum_monitor.py.bak
templates/: status.html
